Adapt code to Java 8 (ARM, redundant template types etc)